# ws-ephemeral

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.local.yaml  docker-compose.yaml  pyproject.toml  test.py
.github/workflows/: docker-image.yml
src/: app.py  config.py  monitor.py  run.py
src/clients/: cookie.py  gluetun.py  qbittorrent.py  windscribe.py
src/lib/: gluetun.py
src/logger/: __init__.py  config.yaml
src/ws/: cookie.py  ws.py
tests/: test_config.py  test_windscribe.py
